--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,7 @@ body {
 .contain{
     width: 70%;
     margin: auto;
+    background-color: #ffffff;
 }
 
 .menu {
@@ -53,10 +54,22 @@ body {
     padding-bottom: 3px;
 }
 
-.side-info>img {
+.for-photo {
+    background-color: #c4c4c4;
     width: 80%;
+    height: 9rem;
     border-radius: 5rem;
     margin: 5px auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+#ld_photo {
+    width: 80%;
+    border: solid 2px black;
+    background-color: inherit;
+    margin: 0 auto;
 }
 
 .side-info>.p-info {
@@ -95,3 +108,30 @@ body {
     margin: 0 1rem;
 }
 
+
+.inp-edit {
+    width: 90%;
+    margin: 2px auto;
+    padding: 0 3px;
+    background-color: #faf7f3;
+}
+
+.inp-edit-name {
+    width: 40%;
+    height: 4rem;
+    margin: 0 auto;
+    background-color: #c4c4c4;
+    color: black;
+    font-size: 3rem;
+    text-align: center;
+}
+.inp-edit-name::placeholder {
+    font-size: 3rem;
+    color: black;
+    text-align: center;
+}
+
+.inp-edit-main {
+    width: 100%;
+    border: solid 1px black;
+}
